--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
