--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.2.0",
     "react-hamburger-menu": "^1.2.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-leaflet": "^3.0.0",
