--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "framer-motion": "^12.4.4",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
-    "lottie-react": "^2.4.0",
+    "lottie-react": "^2.4.1",
     "match-sorter": "^8.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^7.6.0",
