--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^3.0.0",
     "react-router-dom": "^7.1.1",
+    "react-scroll": "^1.9.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
