--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
     "match-sorter": "^8.0.0",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.2.0",
