--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
     "match-sorter": "^8.0.0",
-    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.2.0",
@@ -41,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
